fixed some of the layout issues

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -26,6 +26,9 @@ header ul {
     display: flex;
     margin-top: auto;
     margin-bottom: auto;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    margin-right: 0.5em;
 }
 
 header li + li::before {
@@ -55,7 +58,7 @@ footer {
 
 }
 
-.blog__post, .index, .blog {
+.blog__post, .index, .blog, .text__content {
     background-color: var(--content-background-color);
     border-radius: 26px;
     grid-column: 4 / 13;
@@ -67,19 +70,67 @@ footer {
     white-space: pre-line;
 }
 
-.index > div, .blog > div {
-    margin-left: 8%;
-    margin-top: 3.5em;
-    margin-right: 30%;
+.index {
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(3,1fr);
 }
 
-.index h2 {
+.index__blog {
+    grid-column: 2 / 11;
+    grid-row: 1 / 1;
+}
+
+.index__post {
+    display: grid;
+}
+
+.index__post h3 {
+    grid-column: 1 / 12;
+}
+
+.index__post .post__date {
+    grid-column: 11 / 12;
+    text-align: right;
+}
+
+.index__post .post__tags {
+    grid-column: 9 / 12;
     margin-bottom: 0.5em;
+}
+
+.index__post .post__content {
+    grid-column: 1 / 12;
+}
+
+.index__post .post__link {
+    grid-column: 11 / 12;
+    margin-top: 0.5em;
+}
+
+.index__blog h2 {
+    margin-bottom: 0.5em;
+    margin-top: 1em;
 }
 
 .index__projects {
     border-left: 10px var(--project-accent-color) solid;
     padding-left: 1em;
+    grid-column: 2 / 11;
+    grid-row: 2 / 2;
+    display: grid;
+}
+
+.index__projects h2 {
+    grid-column: 1 / 12;
+}
+
+.index__projects ul {
+    grid-column: 1 / 12;
+}
+
+.index__projects .index__follow-link {
+    grid-column: 11 / 12;
 }
 
 .index__projects h3 + div {
@@ -87,33 +138,111 @@ footer {
     margin-bottom: 1em;
 }
 
-.index__follow-link, .index .post__link, .index__blog .post__date, .index__blog .post__tags {
+.text__content {
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: min-content max-content; 
+}
+
+.text__content h1, .text__content p, .text__content div, .text__content h2 {
+    grid-column: 2 / 10;
+}
+
+.text__content p {
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+}
+
+.text__content h1 {
+    margin-top: 1em;
+}
+
+.blog {
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    //grid-template-rows: min-content max-content; 
+}
+
+.blog h1 {
+    grid-column: 3 / 10;
+    margin-top: 1em;
+}
+
+.blog div {
+    grid-column: 3 / 10;
+}
+
+.blog__post {
+    display: grid;
+}
+
+.blog__post h2 {
+    grid-column: 1 / 12;
+    margin-top: 0.5em;
+}
+
+.blog__post .post__date {
+    grid-column: 11 / 12;
     text-align: right;
 }
 
-.index__blog .post__tags {
-    margin-bottom: 0.5em;
+.blog__post .post__tags {
+    grid-column: 10 / 12;
+    text-align: right;
+}
+
+.blog__post .post__content {
+    grid-column: 1 / 12;
 }
 
 .sidebar {
     background-color: var(--sidebar-background-color);
     border-radius: 26px 0px 0px 26px;
-    padding: 6em;
     grid-column: 1 / 5;
     grid-row: 1;
+    //display: flex;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: repeat(12,1fr);
+
     
 }
 
 .sidebar__content {
-    display: flex;
+   /* display: flex;
     flex-direction: column;
     justify-content: center;
     margin-right: 30%;
+    padding: 2em;*/
+    grid-column: 2 / 5;
+    grid-row: 3 / 6;
 }
 
-.sidebar__content div {
-    margin-bottom: 2em;
+
+.sidebar__title {
+    margin-bottom: 1.5em;
 }
+
+.sidebar__blurb {
+    padding-right: 1.5em;
+}
+
+.sidebar-menu {
+    grid-column: 2 / 5;
+    grid-row: 2 / 6;
+}
+
+.sidebar__blog-links {
+    margin-top: 2em;
+}
+
+.sidebar__blog-links a {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    display: block;
+}
+
+
 
 .accent {
     grid-column: 12 / 12;
@@ -140,6 +269,11 @@ footer {
     display: flex;
     flex-direction: column;
     margin: 20px;
+  }
+
+  .divider {
+    text-align: center;
+    border-bottom: 3px var(--project-accent-color) double;
   }
   
   #navToggleButton {
